textures for tank

--- a/obj-load/index.html
+++ b/obj-load/index.html
@@ -5,7 +5,7 @@
 <script src="../glMatrix-0.9.5.min.js"></script>
 <script src="../lib/gl-helpers.js"></script>
 <script src="../lib/load-obj.js"></script>
-<script src="tank.obj.js"></script>
+<script src="tank/tank.obj.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
